# marktplaats-bot

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_ai_columns.py  003_add_image_reason_bidding.py  004_unique_constraint.py  005_add_favorited.py  006_feedback_applied.py
src/marktplaats_bot/: analyzer.py  config.py  database.py  feedback.py  main.py  models.py  notifier.py  scheduler.py  schemas.py  scraper.py
src/marktplaats_bot/routers/: listings.py  searches.py
tests/: conftest.py  test_analyzer.py  test_feedback.py  test_listings.py  test_models.py  test_notifier.py  test_scraper.py  test_searches.py
